BlueGreenDeploy/Deploy_V2/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue-deployment
  namespace: bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-blue
  template:
    metadata:
      labels:
        app: frontend-blue
    spec:
      containers:
        - name: frontend-blue
          image: hv_skilltest_blue-green-deployment-frontend-blue:v2
          ports:
            - containerPort: 3100
          livenessProbe:
            httpGet:
              path: /health
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3100
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue-service
  namespace: bluegreen
spec:
  type: ClusterIP
  selector:
    app: frontend-blue
  ports:
    - name: http
      port: 3100
      targetPort: 3100
