BlueGreenDeploy/Deploy_V2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-ingress
  namespace: bluegreen
spec:
  ingressClassName: nginx
  rules:
    - host: blue.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-blue-service
                port:
                  number: 3100
